<resources>
    <plurals name="bottom_sheet_title">
        <item quantity="one">%d match found</item>
        <item quantity="other">%d matches found</item>
    </plurals>
    <string name="app_name">Med Herb Lens</string>
    <string name="single_image">Single Image</string>
    <string name="multiple_images">Multiple Images</string>
    <string name="camera">Camera</string>
    <string name="settings_title">Lens Settings</string>
    <string name="cd_settings_button">Settings</string>
    <string name="cd_close_button">Back</string>
    <string name="cd_flash_button">Toggle camera flash</string>
    <string name="cd_photo_library_button">Upload image</string>
    <string name="prompt_point_at_an_object">Point your camera at an object</string>
    <string name="prompt_hold_camera_steady">Keep camera still for a moment</string>
    <string name="prompt_searching">Searching&#8230;</string>
    <string name="product_search_button">Search object</string>
    <string name="static_image_prompt_detected_results">Tap on a dot to inspect</string>
    <string name="static_image_card_no_result_title">No result found</string>
    <string name="static_image_detected_no_results_continue_to_label">An issue\'s occurred while detecting objects. You may turn off Objects mode or contactus.</string>
    <string name="static_image_classification_result">This could be:  -Herb code: %1$s.  -Latin name: %2$s.  -Vietnamese name: %3$s.</string>
    <string name="pref_category_camera">Camera</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_title_rear_camera_preview_size">Rear camera preview size</string>
    <string name="pref_category_object_detection">Object detection</string>
    <string name="pref_key_object_detector_enable_multiple_objects" translatable="false">odemo</string>
    <string name="pref_title_object_detector_enable_multiple_objects">Enable multiple objects</string>
    <string name="pref_title_object_detector_enable_classification">Enable classification</string>
    <string name="pref_category_herb_labeling">Herb labeling</string>
    <string name="pref_key_enable_auto_search" translatable="false">pkeas</string>
    <string name="pref_title_enable_auto_search">Enable auto labeling</string>
    <string name="pref_key_confirmation_time_in_manual_search" translatable="false">ctims</string>
    <string name="pref_title_confirmation_time_in_manual_search">Confirmation time in manual labeling</string>
    <string name="pref_summary_confirmation_time_in_manual_search">Ranges from 100ms to 1000ms</string>
    <string name="pref_key_confirmation_time_in_auto_search" translatable="false">ctias</string>
    <string name="pref_title_confirmation_time_in_auto_search">Confirmation time in auto labeling</string>
    <string name="pref_summary_confirmation_time_in_auto_search">Ranges from 500ms to 2000ms</string>
    <string name="latin_or_vietnamese_name">Latin or Vietnamese name</string>
    <string name="favorite">Favorite</string>
    <string name="history">History</string>
    <string name="random">Random</string>
    <string name="title_home">Home</string>
    <string name="images">Images</string>
    <string name="overview">Overview</string>
    <string name="caution">Caution</string>
    <string name="review">Review</string>
    <string name="add_a_new_herb">Add a new herb</string>
    <string name="log_out">Log out</string>
    <string name="delete_account">Delete account</string>
    <string name="contact_us">Contact us</string>
    <string name="share_this_app">Share this app</string>
    <string name="about_us_and_this_app">About us and this app</string>
    <string name="pick_an_image">Pick an image</string>
    <string name="pick_photos">Pick photos</string>
    <string name="please_use_your_current_location_or">We\'d like to know the general area where this plant grows. You don\'t need to provide an exact location. You can either use your current location or search for one.</string>
    <string name="clear_all">Clear all</string>
    <string name="no_result">No result</string>
    <string name="no_herb_objects_result_please_try_turning_off_objects_mode">No result found in object detection mode. You may turn off objects mode to switch to Whole Image mode!</string>
    <string name="no_herb_result_please_try_turning_on_objects_mode">No result found. You may turn off Whole Image mode!</string>
    <string name="something_went_wrong_please_try_again_or_contact_us">Something went wrong. Please try again or contact us!</string>
    <string name="add_photos">Add multiple photos</string>
    <string name="add_your_photos">Add your images</string>
    <string name="objects_mode">Objects mode</string>
    <string name="whole_image_mode">Whole image mode</string>
    <string name="result">Result</string>
    <string name="search_with_google">Google Latin name</string>
    <string name="search_with_google_vi">Google Vietnamese name</string>
    <string name="failed_to_load_file_please_try_again">Failed to load file! Please try again or try another image!</string>
    <string name="failed_to_label_entire_image_please_turn_on_objects_mode">Failed to recognise this image. You may turn off Whole Image mode or try another image.</string>
    <string name="confidence">Confidence</string>
    <string name="failed_to_load_local_data_store">Failed to load local data store</string>
    <string name="failed_to_label_one_or_some_of_the_images">Failed to label 1 or some of your images.</string>
    <string name="herb_id_s">ID: %s</string>
    <string name="latin_name_s">Latin name: %s</string>
    <string name="vietnamese_name_s">Vietnamese name: %s</string>
    <string name="english_name_s">English name:</string>
    <string name="overview_s">Overview:</string>
    <string name="dosing_s">Dosing:</string>
    <string name="side_effects_s">Side effects:</string>
    <string name="interactions_s">Interactions:</string>
    <string name="your_selected_image">Your selected image</string>
    <string name="ranges_from_0_to_100">Ranges from 0 to 100</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="you_have_been_signed_out">You have been signed out</string>
    <string name="your_account_has_been_deleted">Your account has been deleted</string>
    <string name="about_us">Med Herb Lens is a non-profit project that utilises Artificial Intelligence
        (Deep Learning - Tensorflow) to assist medicinal herbalists and traditional healers and physicians in automatically
        recognizing and classifying medicinal plants.
        \n\nThis project was initiated and has been led by Mr. Minh Le, a Doctor of Traditional Medicine
        student from Thanh Dong University, Vietnam. He helped build the dataset and also assisted in evaluating
        the authenticity of the input data.
        \n\nIn consultation with Mr Le, this Android app has been developed by Mr Trien Tran. He is an alumnus
        of St. Paul University Philippines. If you are an iOS developer or backend engineer with Nodejs knowledge and willing to join us voluntarily, please reach out via the contact button.
        \n\nAs of now, the developed AI model can recognise only 7 herbal plants due to limited input data. Therefore, we look forward to expanding the number of recognised medicinal plants to as many as possible.
        This ambition will not be achieved without your support. There are 2 ways you may help us out:
        \n\n- Please contribute to the dataset by capturing your own herb images using your own mobile and camera devices,
        then upload them all to our server using this mobile app.
        \n\nThe image quality does not matter, meaning that it is OK to set the lowest image resolutions for your camera. You may take photos in both portrait and horizontal modes, in different environments with different brightness (night vs day, indoor vs outdoor…).
        \n\nWe need details such as fruits, blossoms, branches, leaves, roots, and whole plant, both fresh and sun-dried ones, if possible.
        \n\n- And can you please also help us fill in all the herbs\' details such as usage, side effects, drug interactions etc.? To do this, please browse or search using our search bar to look for the herbs that you are familiar with or have information about. Then you can click on the edit buttons to modify those details at your own convenience.
      </string>
    <string name="_70_herbs_list">70 herbs list</string>
    <string name="full_herb_list">Full herbal list</string>
    <string name="are_you_sure_you_want_to_delete_your_account">Are you sure you want to delete your account?</string>
    <string name="sign_out">Sign out</string>
    <string name="your_herb_list_will_be_loaded_soon">Herb list will be loaded soon once available.</string>
    <string name="dosing">Dosing</string>
    <string name="like">Like</string>
    <string name="report_an_issue_via_facebook">Report an issue via Facebook</string>
    <string name="please_upload_images_for_this_herb">There are no photos for this herb yet. Please click here to upload them now.</string>
    <string name="add_more">Add more</string>
    <string name="upload">Upload</string>
    <string name="add_images">Add images</string>
    <string name="instruction">Instruction</string>
    <string name="image_item">image item</string>
    <string name="how_to_take_photos">This app does not support capturing photos yet. Please use a camera app to take photos. The image quality does not matter when it comes to regular smartphones and cameras, meaning that it is OK to set the lowest image resolutions for your devices\' cameras, to save storage. However, we don\'t recommend photos taken in an artistic or selfie mode.
    \n\nIt is your choice to take the photos in either portrait or horizontal mode or both, in different environments at different angles or corners with different brightness (night vs day, indoor vs outdoor…). The more the better though ^_^.
    \n\nWe need details such as fruits, blossoms, branches, leaves, roots and whole plant, both fresh and sun-dried ones, if possible because diversity does matter ^_^. Generally, at least 50 images for each part of the plant should suffice for our AI model to learn. We limit the maximum of photo intakes to 1000 per herb.
    \n\nThe rule of thumbs is, if you have taken a photo of a known herb but you are unable to say the name of the plant in that photo, our AI model should not be either ^_^.
       </string>
    <string name="vietnamese_name">Vietnamese name</string>
    <string name="english_name">English name</string>
    <string name="latin_name">Latin name</string>
    <string name="conditions_diabetes_liver_diseases">Conditions (diabetes, liver diseases…)</string>
    <string name="submit">Submit</string>
    <string name="effectiveness">Effectiveness:</string>
    <string name="ease_of_use">Ease of use:</string>
    <string name="patient_name">Patient\'s name</string>
    <string name="patient_age">Patient\'s age</string>
    <string name="patient_comment">Patient\'s comment</string>
    <string name="report_an_issue_via_email">Report an issue via email</string>
    <string name="please_only_add_a_new_herb_if_etc">Please only add a new herb if you (1) have photos of that herb and you are ready to upload them and (2) you couldn\'t find the herb by using the search bar or using the All-herbs tab.</string>
    <string name="please_enter_at_least_of_these_names_for_the_new_herb">Please enter at least one of these fields for the new herb:</string>
    <string name="n_images_have_been_uploaded_etc">%s images uploaded</string>
    <string name="current_location">Current location</string>
    <string name="search_for_a_location">Search for a location</string>
    <string name="address">Address:</string>
</resources>