<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/close"
        android:icon="@drawable/ic_baseline_arrow_back_24"
        android:title="@string/title_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_like"
        android:icon="@drawable/ic_baseline_favorite_dislike"
        android:title="@string/like"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_report_facebook"
        android:title="@string/report_an_issue_via_facebook"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_report_email"
        android:title="@string/report_an_issue_via_email"
        app:showAsAction="never" />

</menu>
