<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/top_action_bar_height"
    android:paddingStart="@dimen/top_action_bar_padding_horizontal"
    android:paddingEnd="@dimen/top_action_bar_padding_horizontal"
    android:background="@drawable/top_action_bar_scrim">

  <ImageView
      android:id="@+id/close_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="start"
      android:padding="@dimen/top_action_button_padding"
      android:contentDescription="@string/cd_close_button"
      app:srcCompat="@drawable/ic_close_vd_white_24"/>

  <TextView
      android:id="@+id/photo_library_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:textColor="@color/white"
      android:padding="12dp"
      android:drawablePadding="4dp"
      android:drawableEnd="@drawable/ic_photo_library_vd_white_24"
      android:contentDescription="@string/cd_photo_library_button"
      android:text="@string/pick_an_image"
      app:drawableEndCompat="@drawable/ic_photo_library_vd_white_24" />

</RelativeLayout>
