<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".herbdetails.review.AddReviewFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@id/submitBtn"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameEditTextView"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/patient_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/ageEditTextView"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/patient_age"
                android:inputType="number" />

            <EditText
                android:id="@+id/conditionEditTextView"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/conditions_diabetes_liver_diseases"
                android:inputType="text" />

            <TextView
                android:id="@+id/effectivenessView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:paddingTop="12dp"
                android:text="@string/effectiveness" />

            <RatingBar
                android:id="@+id/ratingBarEffectiveness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="0" />

            <TextView
                android:layout_marginTop="8dp"
                android:id="@+id/easeOfUseView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:paddingTop="12dp"
                android:text="@string/ease_of_use" />

            <RatingBar
                android:id="@+id/ratingBarEaseOfUse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="0" />

            <EditText
                android:layout_marginTop="8dp"
                android:id="@+id/commentEditTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/patient_comment"
                android:inputType="textMultiLine" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/color_primary_dark"
        android:indeterminateTintMode="src_in"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>