<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".herbdetails.review.ReviewFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_action_bar_scrim"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/cd_close_button"
            android:foregroundTint="@color/white"
            android:padding="@dimen/top_action_button_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close_vd_white_24" />

        <TextView
            android:id="@+id/clear_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:padding="12dp"
            android:textColor="@color/white"
            android:visibility="gone"
            app:drawableEndCompat="@drawable/ic_baseline_delete_forever_24"
            app:layout_constraintEnd_toStartOf="@id/instruction_view"
            app:layout_constraintStart_toEndOf="@id/close_button"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/instruction_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/instruction"
            android:textColor="@color/white"
            app:drawableEndCompat="@drawable/ic_baseline_question_mark_24"
            app:layout_constraintEnd_toStartOf="@id/addImagesBtn"
            app:layout_constraintStart_toEndOf="@id/clear_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/addImagesBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/add_images"
            android:textColor="@color/white"
            app:drawableEndCompat="@drawable/ic_baseline_add_photo_alternate_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@id/uploadBtn"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

    <LinearLayout
        android:id="@+id/locationGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <TextView
            android:id="@+id/locationInstructionTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp"
            android:text="@string/please_use_your_current_location_or"
            android:textAlignment="textStart"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/pickPhotosView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/currentLocationBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/current_location"
            app:layout_constraintBottom_toTopOf="@id/addressLine"
            app:layout_constraintTop_toBottomOf="@id/locationInstructionTv" />

        <Button
            android:id="@+id/searchLocationBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/search_for_a_location"
            app:layout_constraintBottom_toTopOf="@id/addressLine"
            app:layout_constraintTop_toBottomOf="@id/locationInstructionTv" />

        <TextView
            android:id="@+id/addressLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp"
            android:text="@string/address"
            android:textAlignment="textStart"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/pickPhotosView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currentLocationBtn" />

        <com.mapbox.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:mapbox_cameraBearing="0.0"
            app:mapbox_cameraPitch="0.0"
            app:mapbox_cameraTargetLat="-25.2744"
            app:mapbox_cameraTargetLng="133.7751"
            app:mapbox_cameraZoom="2.0" />

    </LinearLayout>

    <TextView
        android:id="@+id/progressTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@color/color_accent"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/n_images_have_been_uploaded_etc" />

    <Button
        android:id="@+id/uploadBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/pickPhotosView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/pick_photos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
